tests/snapshots/tests__ranges@dont-modify-eof.lua.snap
---
source: tests/tests.rs
expression: "format(&contents, Some(range))"

---
local foo = bar

local bar   =     baz    




