tests/snapshots/tests__ranges@incomplete-range.lua.snap
---
source: tests/tests.rs
expression: "format(&contents, Some(range))"

---
-- Tests what happens when the range doesnt contain a whole statement

local    fooo =    bar    



