tests/snapshots/tests__sort_requires@groups-2.lua.snap
---
source: tests/tests.rs
expression: "format_code(&contents,\n        Config::default().with_sort_requires(SortRequiresConfig::default().set_enabled(true)),\n        None, OutputVerification::None).unwrap()"
---
local Players = game:GetService("Players")
local ReplicatedStorage = game:GetService("ReplicatedStorage")
local Binder = require(ReplicatedStorage.Packages.Binder)
local Roact = require(ReplicatedStorage.Packages.Roact)
local RoactRodux = require(ReplicatedStorage.Packages.RoactRodux)
local Rodux = require(ReplicatedStorage.Packages.Rodux)

local Remotes = require(ReplicatedStorage.Shared.Remotes)

local ATM = require(script.ATM)
local ATMMachine = require(script.Components.Banking.ATM)
local Bank = require(script.Bank)
local BankTeller = require(script.BankTeller)
local BankTellerScreen = require(script.Components.Banking.BankTellerScreen)
local CleaningMoney = require(script.Components.CleaningMoney)
local DisablePower = require(script.Components.DisablePower)
local MoneyInfo = require(script.Parent:WaitForChild("MoneyInfo"))
local MoneyLaunderer = require(script.MoneyLaunderer)
local Reducers = require(script.Reducers)
local RobAmount = require(script.Components.RobAmount)
local VaultHacking = require(script.Components.VaultHacking)
local LocalPlayer = Players.LocalPlayer

