tests/snapshots/tests__standard@assignment-comments-2.lua.snap
---
source: tests/tests.rs
expression: format(&contents)
---
-- https://github.com/JohnnyMorganz/StyLua/issues/416
local variable = call(
	somethingToCall().foo.bar.baz,
	"some super long string that will stay on this line aaaaaaaaaaaaaaaaa"
) -- a comment
	.. "another string"

